--- a/RhSystem/appsettings.json
+++ b/RhSystem/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "MyWebApiConection": "User ID=postgres;Password=postgres;Server=localhost;Port=5432; Database=RhSystem; Integrated Security=true;Pooling=true;"
+  },
   "AllowedHosts": "*"
 }
