--- a/RhSystem/RhSystem.csproj
+++ b/RhSystem/RhSystem.csproj
@@ -22,5 +22,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Seeders\" />
+  </ItemGroup>
+
 
 </Project>
