--- a/RHSystem.Front/rh-system/package.json
+++ b/RHSystem.Front/rh-system/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^2.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
